구조 통일 및 IN 쿼리 수정